improve performance: virtual threads, jvm args, hibernate hacks for immutable jsons