@@ -8,4 +8,4 @@ RUN --mount=type=cache,target=/root/.m2 mvn clean package -DskipTests
 FROM eclipse-temurin:25-jre-alpine
 COPY --from=builder /src/modules/server/target/server-*.jar app.jar
 #COPY ./modules/server/target/server-*.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-XX:+UseZGC","-XX:+UseCompactObjectHeaders","-XX:MaxRAMPercentage=75","-jar","/app.jar"]
